--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -108,10 +108,12 @@
     background-color: var(--headerBackgroundColor);
     opacity: 1;
     visibility: visible;
+    z-index: 1000000;
 }
 
 .secondaryList:hover
 {
+    z-index: 100000;
     display: flex;
     flex-direction: column;
     row-gap: 1vw;
